--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -57,5 +57,12 @@
         android:layout_below="@+id/passwordTIL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/btn_annuller"
+        android:text="ANNULER"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/btn_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
