--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".RegisterActivity">
+    tools:context=".LoginActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="@string/register"
+        android:text="Login"
         android:textColor="@color/colorBlack"
         android:textSize="25sp"/>
 
@@ -50,8 +50,8 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btn_register"
-        android:text="REGISTER"
+        android:id="@+id/btn_login"
+        android:text="LOGIN"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/passwordTIL"
@@ -61,17 +61,27 @@
         android:id="@+id/btn_annuller"
         android:text="ANNULER"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/btn_register"
+        android:layout_below="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/tv_have_account"
+        android:id="@+id/tv_not_have_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="Already have account? Login"
+        android:text="Not have account? Register"
         android:layout_below="@id/btn_annuller"
+        android:textColor="@color/colorBlack"
+        android:textSize="20sp"/>
+
+    <TextView
+        android:id="@+id/tv_recover_account"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="Forgot Password? Recover"
+        android:layout_alignParentBottom="true"
         android:textColor="@color/colorBlack"
         android:textSize="20sp"/>
 
