--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".UserProfileActivity">
+    tools:context=".ProfileActivity">
 
     <TextView
         android:id="@+id/tv_profile"
