--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,15 +53,19 @@
         android:id="@+id/btn_login"
         android:text="LOGIN"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/passwordTIL"
+        android:drawableLeft="@drawable/ic_password"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <Button
         android:id="@+id/btn_annuller"
         android:text="ANNULER"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/btn_login"
+        android:layout_toLeftOf="@id/btn_login"
+        android:layout_alignTop="@id/btn_login"
+        android:drawableLeft="@drawable/ic_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -69,6 +73,7 @@
         android:id="@+id/tv_not_have_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:textAlignment="center"
         android:text="Not have account? Register"
         android:layout_below="@id/btn_annuller"
