--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,4 +5,10 @@
     <item
         android:id="@+id/menu_logout"
         android:title="LOGOUT" />
+    <item
+        android:id="@+id/app_bar_search"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="SEARCH"
+        app:showAsAction="always"
+        app:actionViewClass="android.widget.SearchView" />
 </menu>
