--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -14,4 +14,8 @@
         android:title="USERS"
         android:icon="@drawable/ic_users_black" />
 
+    <item android:id="@+id/nav_chats"
+        android:title="CHATS"
+        android:icon="@drawable/ic_chat_black" />
+
 </menu>
