--- a/app/src/main/res/layout/row_post.xml
+++ b/app/src/main/res/layout/row_post.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/ly_profile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
