--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,7 +6,7 @@
         android:id="@+id/menu_logout"
         android:title="LOGOUT" />
     <item
-        android:id="@+id/app_bar_search"
+        android:id="@+id/menu_search"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="SEARCH"
         app:showAsAction="always"
